--- a/app/src/main/res/layout/weather_view.xml
+++ b/app/src/main/res/layout/weather_view.xml
@@ -15,19 +15,20 @@
         android:layout_height="100dp">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             app:srcCompat="@android:color/holo_blue_bright"
-            android:id="@+id/imageView"
-            android:layout_marginRight="10dp"/>
+            android:id="@+id/temp_image_id"
+            android:layout_marginRight="10dp"
+            android:layout_margin="5dp"/>
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/imageView"
+            android:layout_toRightOf="@id/temp_image_id"
             android:layout_weight=".70"
-            android:layout_marginLeft="5dp  "
+            android:layout_marginLeft="5dp"
             android:id="@+id/tdy_view_id">
 
             <TextView
